# Cursor-Prompt-Engineering

./: CHECKLIST.md  WhatsApp_TimeAware_Cover_Email_Pro_Privacy.txt  WhatsApp_TimeAware_Feature_Brief_Privacy_v2.docx  WhatsApp_TimeAware_Final_Dossier.docx
Kisaan Connect/: .gitignore  Cursor_All_In_One_Prompt_Pack.md  Cursor_All_In_One_Prompt_Pack_Windows.md  README.md  build.gradle.kts  cursor_prompts_full.json  docker-compose.yml  settings.gradle.kts
Kisaan Connect/docs/: Farmer_App_FRD_with_Diagrams.docx  HLD_Appendix_OpenAPI_and_DataModel.docx  HLD_KisanConnect_Enhanced_with_Diagrams.docx
Kisaan Connect/milestones/: M1-foundation.md  M10-web-pwa.md  M11-admin-console.md  (+10 more)
MCMC Random Tool/: .gitignore  MCMC Tool Prompt.txt  Usages
MCMC Random Tool/mcmc_random_tool/: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  topk_sequences.csv
MCMC Random Tool/mcmc_random_tool/.github/workflows/: ci.yml
MCMC Random Tool/mcmc_random_tool/docs/: USAGE.md
MCMC Random Tool/mcmc_random_tool/examples/: input.txt
MCMC Random Tool/mcmc_random_tool/mcmc_random_tool/: __init__.py  cli.py  io_utils.py  model.py  posterior.py  viz.py
MCMC Random Tool/mcmc_random_tool/mcmc_random_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MCMC Random Tool/mcmc_random_tool/tests/: __init__.py  test_cli.py  test_io_utils.py  test_model.py  test_posterior.py
Project Delivery & Maintenance Software/: Complete_Requirements_Traceability_Matrix.xlsx  High Level Requirements.docx  Project_Requirements_Document.docx  ~$gh Level Requirements.docx
Secure Offline PDF Editor/: .gitattributes  .gitignore  Installation.md  LICENSE  Milestones  README.md  build-msi.bat  build.gradle.kts  create-msi.bat  create-secure-msi.bat  cursor-recipe.json  install.bat  settings.gradle.kts
SecureFamilyPdfSoftware/: .gitignore  BUILD_SUMMARY.md  BUILD_SUMMARY_FIXED.md  Build Custom PDF Editor.docx  Directory.Build.props  NuGet.config  README.md  Secure Offline Pdf (windows).txt  SecureFamilyPdf.sln  SecurePdfEditor.sln  SecurePdfEditor_PromptPack.md  global.json
Security Setup Scanning Tool/: Security_Orchestration_Risk_Platform_DDP.docx  Security_Orchestration_Risk_Platform_Extended_Tables_v2.docx  Security_Orchestration_Risk_Platform_HLD_v2.docx  Security_Orchestration_Risk_Platform_LLD.docx
WhatsApp_TimeAware_Final_Bundle/: WhatsApp_TimeAware_Feature_Brief_Privacy_v2.docx  WhatsApp_TimeAware_Final_Dossier.docx  WhatsApp_TimeAware_UI_Spec_Clean_Accessible.docx  WhatsApp_Time_Aware_Messaging_PRD_clean.docx
microservices-bootcamp/: README.md  cursor.json
(+190 files in other folders)
